--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,5 +19,10 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".activity.StudentDetailsActivity"
+            android:exported="true">
+        </activity>
+
     </application>
 </manifest>
