--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,5 +24,10 @@
             android:exported="true">
         </activity>
 
+        <activity
+            android:name=".activity.EditStudentActivity"
+            android:exported="true">
+        </activity>
+
     </application>
 </manifest>
