fix edit student functions (fifnt fix check render yet)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,5 +29,10 @@
             android:exported="true">
         </activity>
 
+        <activity
+            android:name=".activity.StudentsListActivity"
+            android:exported="true">
+        </activity>
+
     </application>
 </manifest>
